<resources>
    //APP NAME
    <string name="app_name">Real Estate Manager</string>

    //FOR BUILDING TYPE
    <string name="house">House</string>
    <string name="apartment">Apartment</string>
    <string name="vila">Vila</string>

    //FOR MEDIA TYPE
    <string name="photoMedia">Photo</string>
    <string name="videoMedia">Video</string>

    //FOR STATUS
    <string name="sold">Sold</string>
    <string name="for_sale">For sale</string>

    //DETAIL FRAGMENT
    <string name="photo">Photos</string>
    <string name="video">Video</string>
    <string name="description_detail">Description</string>
    <string name="surface">Surface</string>
    <string name="number_room">Number of rooms</string>
    <string name="number_bathroom">Number of bathrooms</string>
    <string name="number_bedroom">Number of bedrooms</string>
    <string name="location_string">Location</string>
    <string name="no_item_selected">Select a real estate to see details</string>
    <string name="price">Price</string>
    <string name="filter">Filter</string>
    <string name="create">Create</string>
    <string name="details">Details</string>
    <string name="since">since</string>

    //CREATE FRAGMENT
    <string name="create_title">Create your real estate</string>
    <string name="content_description_rv">A list of real estate\'s photos</string>
    <string name="content_description_video_rv">A list of real estate\'s videos</string>
    <string name="address_tv">Address </string>
    <string name="city_tv">City </string>
    <string name="type_tv">Type of real estate</string>
    <string name="price_tv">Price</string>
    <string name="surface_tv">Surface</string>
    <string name="rooms_tv">Rooms</string>
    <string name="bedrooms_tv">Bedrooms</string>
    <string name="bathrooms_tv">Bathrooms</string>
    <string name="description_tv">Description</string>
    <string name="amenities_tv">Amenities</string>
    <string name="realEstateAgent_tv">Your name</string>
    <string name="photos_tv">Upload photos :</string>
    <string name="save_btn">Save</string>
    <string name="select_picture_btn">Select picture</string>
    <string name="take_picture_btn">Take picture</string>

    //AMENITIES
    <string name="school">School</string>
    <string name="shop">Shops</string>
    <string name="mall">Shopping Mall</string>
    <string name="station">Train Station</string>
    <string name="bakery">Bakery</string>
    <string name="gym">Gym</string>
    <string name="amenities_string">Amenities</string>
    <string name="none">None</string>
    <string name="forest">Forest</string>

    <string name="delete_icon">delete icon</string>
    <string name="pencil_icon">pencil icon</string>
    <string name="label_tv">Add a label</string>
    <string name="create_label">Create label</string>
    <string name="add_label">Add label</string>

    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="no_internet">No internet connexion, real estate impossible to create</string>
    <string name="wrong_address">Address does\'nt exist !</string>
    <string name="address_invalid">Invalid address OR no internet connectivity</string>
    <string name="internet_info">Info : You will need Internet </string>
    <string name="button_update">"Button to update "</string>
    <string name="creation_succeed">Creation succeed !</string>

    //UPDATE FRAGMENT
    <string name="update_title">Update your real estate</string>
    <string name="filter_title">Select filters</string>
    <string name="apply_btn">Apply</string>
    <string name="surface_max_tv">Surface maximum</string>
    <string name="surface_min_tv">Surface minimum</string>
    <string name="price_max_tv">Price maximum</string>
    <string name="price_min_tv">Price minimum</string>
    <string name="status_tv">Sales status</string>
    <string name="date_of_sale">Select the date of sale</string>
    <string name="updated_succeed">The real estate has been updated</string>
    <string name="apply_filter">Apply filter</string>
    <string name="failure">Address does not exist, please enter a correct address</string>
    <string name="clear_filter">Clear filter</string>
    <string name="play_btn">Button to play the video</string>
    <string name="play_button">button to play the video</string>
    <string name="video_thumbnail">video\'s thumbnail, before the video is playing</string>

    <string name="real_estate_created">The new real estate has been created successfully !</string>
    <string name="real_estate_update">The real estate has been updated successfully !</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
    <string name="creation_notif">Creation succeed</string>
    <string name="update_notif">Update succeed</string>
    <string name="enable_notification_permission">Please enable notifications</string>


</resources>
