<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="left">

    <item
        android:id="@+id/app_bar_filter"
        android:icon="@drawable/filter_icon"
        app:showAsAction="always"
        android:title="@string/filter"/>

    <item
        android:id="@+id/app_bar_create"
        android:icon="@drawable/create_icon"
        app:showAsAction="always"
        android:title="@string/create"/>

    <item
        android:id="@+id/app_bar_map"
        android:icon="@drawable/map_icon"
        app:showAsAction="always"
        android:title="@string/map"

        />

    <item
        android:id="@+id/app_bar_list"
        android:icon="@drawable/list_icon"
        app:showAsAction="always"
        android:title="@string/list"
        tools:ignore="AlwaysShowAction" />

</menu>

